always present scroll bar to avoid jumping

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ html, body {
   height: 100%;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .wrapper {
   min-height: 100%;
   height: auto !important;
